--- a/styles/Blog.module.scss
+++ b/styles/Blog.module.scss
@@ -15,6 +15,10 @@
             color: #FF6600;
             position: absolute;
             transform: translateX(-3.5rem);
+
+            @media only screen and (max-width: 400px) {
+                transform: translateX(-2.5rem);
+            }
         }
     }
 }
