--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,22 @@
 html {
   font-size: 62.5%;
+  @media only screen and (max-width: 800px) {
+    font-size: 56.25%;
+  }
+
+  @media only screen and (max-width: 700px) {
+    font-size: 53.125%;
+  }
+
+  @media only screen and (max-width: 600px) {
+    font-size: 50%;
+  }
+
+  @media only screen and (max-width: 350px) {
+    font-size: 46.875%;
+  }
+
+
 }
 
 * {
@@ -12,6 +29,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 1.6rem;
   margin: 0;
+
+
 }
 
 a {
